concord_macros/tests/trybuild/fail/parser/policy/query_append_block.stderr
error: expected `=`
  --> tests/trybuild/fail/parser/policy/query_append_block.rs:13:19
   |
13 |             "tag" += tag
   |                   ^
